--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,4 +1,7 @@
 $link-color: #3385FF;
+$light-gray1: #e7eaec;
+$light-gray2: #f3f3f4;
+$white: #fff;
 //$link-color: #6d1f1a;
 
 .landing-page .carousel-caption {
@@ -54,14 +57,14 @@ h3, h4, h5 {
     color: #999c9e;
   }
   > li.active > a {
-    color: #fff;
+    color: $white;
   }
 }
 
 .navbar-default .nav > li > a {
   &:focus, &:hover {
     background-color: #293846;
-    color: #fff;
+    color: $white;
   }
 }
 
@@ -157,26 +160,26 @@ h3, h4, h5 {
 
 .navbar-default .landing_link a {
   background: $link-color;
-  color: #fff;
+  color: $white;
   &:hover {
     background: $link-color !important;
-    color: #fff;
+    color: $white;
   }
   span.label {
-    background: #fff;
+    background: $white;
     color: $link-color;
   }
 }
 
 .navbar-fixed-top {
   transition-duration: .4s;
-  border-bottom: 1px solid #e7eaec !important;
+  border-bottom: 1px solid $light-gray1 !important;
   z-index: 2030;
-  background: #f3f3f4;
+  background: $light-gray2;
 }
 
 .navbar-static-top {
-  background: #f3f3f4;
+  background: $light-gray2;
 }
 
 .fixed-nav #wrapper {
@@ -214,7 +217,7 @@ body.canvas-menu .nav-header {
 
 .white-bg {
   .navbar-fixed-top, .navbar-static-top {
-    background: #fff;
+    background: $white;
   }
 }
 
@@ -229,12 +232,12 @@ body.canvas-menu .nav-header {
     }
     a {
       &:focus, &:hover {
-        background: #fff;
+        background: $white;
         color: $link-color;
       }
     }
     &.active {
-      background: #fff;
+      background: $white;
       border: none;
       > a {
         color: $link-color;
@@ -260,7 +263,7 @@ body.canvas-menu .nav-header {
 
 .top-navigation .navbar-brand {
   background: $link-color;
-  color: #fff;
+  color: $white;
   padding: 15px 25px;
 }
 
@@ -309,7 +312,7 @@ body.canvas-menu .nav-header {
 
 .navbar-toggle {
   background-color: $link-color;
-  color: #fff;
+  color: $white;
   padding: 6px 12px;
   font-size: 14px;
 }
@@ -368,37 +371,37 @@ button.dim {
 }
 
 .btn-info.btn-outline:hover, .btn-primary.btn-outline:hover, .btn-success.btn-outline:hover, .btn-warning.btn-outline:hover {
-  color: #fff;
+  color: $white;
 }
 
 .btn-primary {
   background-color: $link-color;
   border-color: $link-color;
-  color: #FFF;
+  color: $white;
   &.active {
     background-color: #0073B1;
     border-color: #0073B1;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #0073B1;
       border-color: #0073B1;
-      color: #FFF;
+      color: $white;
     }
   }
   &:active {
     background-color: #0073B1;
     border-color: #0073B1;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #0073B1;
       border-color: #0073B1;
-      color: #FFF;
+      color: $white;
     }
   }
   &:focus, &:hover {
     background-color: #0073B1;
     border-color: #0073B1;
-    color: #FFF;
+    color: $white;
   }
   &.active[disabled] {
     background-color: #0073B1;
@@ -417,31 +420,31 @@ button.dim {
 .btn-success {
   background-color: #1c84c6;
   border-color: #1c84c6;
-  color: #FFF;
+  color: $white;
   &.active {
     background-color: #1a7bb9;
     border-color: #1a7bb9;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #1a7bb9;
       border-color: #1a7bb9;
-      color: #FFF;
+      color: $white;
     }
   }
   &:active {
     background-color: #1a7bb9;
     border-color: #1a7bb9;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #1a7bb9;
       border-color: #1a7bb9;
-      color: #FFF;
+      color: $white;
     }
   }
   &:focus, &:hover {
     background-color: #1a7bb9;
     border-color: #1a7bb9;
-    color: #FFF;
+    color: $white;
   }
   &.active[disabled] {
     background-color: #1f90d8;
@@ -460,31 +463,31 @@ button.dim {
 .btn-info {
   background-color: #23c6c8;
   border-color: #23c6c8;
-  color: #FFF;
+  color: $white;
   &.active {
     background-color: #21b9bb;
     border-color: #21b9bb;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #21b9bb;
       border-color: #21b9bb;
-      color: #FFF;
+      color: $white;
     }
   }
   &:active {
     background-color: #21b9bb;
     border-color: #21b9bb;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #21b9bb;
       border-color: #21b9bb;
-      color: #FFF;
+      color: $white;
     }
   }
   &:focus, &:hover {
     background-color: #21b9bb;
     border-color: #21b9bb;
-    color: #FFF;
+    color: $white;
   }
   &.active[disabled] {
     background-color: #26d7d9;
@@ -502,8 +505,8 @@ button.dim {
 
 .btn-default {
   color: inherit;
-  background: #fff;
-  border: 1px solid #e7eaec;
+  background: $white;
+  border: 1px solid $light-gray1;
 }
 
 .btn-link {
@@ -553,31 +556,31 @@ button.dim {
 .btn-warning {
   background-color: #f8ac59;
   border-color: #f8ac59;
-  color: #FFF;
+  color: $white;
   &.active {
     background-color: #f7a54a;
     border-color: #f7a54a;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #f7a54a;
       border-color: #f7a54a;
-      color: #FFF;
+      color: $white;
     }
   }
   &:active {
     background-color: #f7a54a;
     border-color: #f7a54a;
-    color: #FFF;
+    color: $white;
     &:focus, &:hover {
       background-color: #f7a54a;
       border-color: #f7a54a;
-      color: #FFF;
+      color: $white;
     }
   }
   &:focus, &:hover {
     background-color: #f7a54a;
     border-color: #f7a54a;
-    color: #FFF;
+    color: $white;
   }
   &.active[disabled] {
     background-color: #f9b66d;
@@ -612,8 +615,8 @@ button.dim {
 
 .btn-white {
   color: inherit;
-  background: #fff;
-  border: 1px solid #e7eaec;
+  background: $white;
+  border: 1px solid $light-gray1;
   &.active {
     color: inherit;
     border: 1px solid #d2d2d2;
@@ -734,7 +737,7 @@ button {
     font-size: 50px;
     line-height: 1em;
     font-weight: 400;
-    color: #fff;
+    color: $white;
     display: block;
     padding-top: 10px;
   }
@@ -764,31 +767,31 @@ button.dim:active:before {
 
 .label-primary {
   background-color: $link-color;
-  color: #FFF;
+  color: $white;
 }
 
 .label-success {
   background-color: #1c84c6;
-  color: #FFF;
+  color: $white;
 }
 
 .label-warning {
   background-color: #f8ac59;
-  color: #FFF;
+  color: $white;
 }
 
 .label-warning-light {
   background-color: #f8ac59;
-  color: #fff;
+  color: $white;
 }
 
 .label-info {
   background-color: #23c6c8;
-  color: #FFF;
+  color: $white;
 }
 
 .label-white {
-  background-color: #FFF;
+  background-color: $white;
   color: #5E5E5E;
   background-color: #2A2E36;
   color: #8B91A0;
@@ -855,7 +858,7 @@ button.dim:active:before {
 }
 
 .form-control {
-  background-color: #FFF;
+  background-color: $white;
   background-image: none;
   border: 1px solid #e5e6e7;
   border-radius: 1px;
@@ -1041,7 +1044,7 @@ label.error {
 }
 
 #vertical-timeline.light-timeline:before {
-  background: #e7eaec;
+  background: $light-gray1;
 }
 
 @media only screen and (min-width: 1170px) {
@@ -1123,7 +1126,7 @@ label.error {
 .vertical-timeline-content {
   position: relative;
   margin-left: 60px;
-  background: #fff;
+  background: $white;
   border-radius: .25em;
   padding: 1em;
   &:after {
@@ -1158,7 +1161,7 @@ label.error {
   height: 0;
   width: 0;
   border: 7px solid transparent;
-  border-right: 7px solid #fff;
+  border-right: 7px solid $white;
 }
 
 @media only screen and (min-width: 768px) {
@@ -1181,7 +1184,7 @@ label.error {
       &::before {
         top: 24px;
         left: 100%;
-        border-color: transparent transparent transparent #fff;
+        border-color: transparent transparent transparent $white;
       }
       .btn {
         float: left;
@@ -1205,7 +1208,7 @@ label.error {
         top: 24px;
         left: auto;
         right: 100%;
-        border-color: transparent #fff transparent transparent;
+        border-color: transparent $white transparent transparent;
       }
       .vertical-date {
         left: auto;
@@ -1245,7 +1248,7 @@ a {
 }
 
 .border-bottom {
-  border-bottom: 1px solid #e7eaec !important;
+  border-bottom: 1px solid $light-gray1 !important;
 }
 
 .font-bold {
@@ -1314,18 +1317,18 @@ a {
 }
 
 .border-left-right {
-  border-left: 1px solid #e7eaec;
-  border-right: 1px solid #e7eaec;
+  border-left: 1px solid $light-gray1;
+  border-right: 1px solid $light-gray1;
 }
 
 .border-left {
-  border-left: 1px solid #e7eaec;
+  border-left: 1px solid $light-gray1;
   border-right: none;
 }
 
 .border-right {
   border-left: none;
-  border-right: 1px solid #e7eaec;
+  border-right: 1px solid $light-gray1;
 }
 
 .full-width {
@@ -1341,7 +1344,7 @@ a {
 }
 
 img.circle-border {
-  border: 6px solid #FFF;
+  border: 6px solid $white;
   border-radius: 50%;
 }
 
@@ -1363,8 +1366,8 @@ code {
 }
 
 .ibox-content, .ibox-title {
-  background-color: #fff;
-  border-color: #e7eaec;
+  background-color: $white;
+  border-color: $light-gray1;
   border-image: none;
   border-style: solid solid none;
 }
@@ -1425,16 +1428,16 @@ code {
 }
 
 .gray-bg {
-  background-color: #f3f3f4;
+  background-color: $light-gray2;
 }
 
 .white-bg {
-  background-color: #fff;
+  background-color: $white;
 }
 
 .navy-bg {
   background-color: $link-color;
-  color: #fff;
+  color: $white;
 }
 
 .panel-primary {
@@ -1482,11 +1485,11 @@ code {
 }
 
 .text-white {
-  color: #fff;
+  color: $white;
 }
 
 .contact-box, .light-navbar .navbar.navbar-static-top {
-  background-color: #fff;
+  background-color: $white;
 }
 
 a.close-canvas-menu {
@@ -1496,7 +1499,7 @@ a.close-canvas-menu {
   z-index: 1011;
   color: #a7b1c2;
   &:hover {
-    color: #fff;
+    color: $white;
   }
 }
 
@@ -1653,7 +1656,7 @@ a.close-canvas-menu {
 }
 
 .contact-box {
-  border: 1px solid #e7eaec;
+  border: 1px solid $light-gray1;
   padding: 20px;
   margin-bottom: 20px;
   > a {
@@ -1677,8 +1680,8 @@ a.close-canvas-menu {
 
 .timeline-item {
   .content, .date i {
-    border-left: 1px solid #e7eaec;
-    border-top: 1px solid #e7eaec;
+    border-left: 1px solid $light-gray1;
+    border-top: 1px solid $light-gray1;
   }
 }
 
@@ -1695,7 +1698,7 @@ ul.clear-list:first-child {
       padding: 5px;
       width: 30px;
       text-align: center;
-      border-bottom: 1px solid #e7eaec;
+      border-bottom: 1px solid $light-gray1;
       background: #f8f8f8;
     }
     text-align: right;
@@ -1744,9 +1747,9 @@ ul.clear-list:first-child {
 }
 
 .file {
-  border: 1px solid #e7eaec;
+  border: 1px solid $light-gray1;
   padding: 0;
-  background-color: #fff;
+  background-color: $white;
   position: relative;
   margin-bottom: 20px;
   margin-right: 20px;
@@ -1783,7 +1786,7 @@ ul.clear-list:first-child {
   .file-name {
     padding: 10px;
     background-color: #f8f8f8;
-    border-top: 1px solid #e7eaec;
+    border-top: 1px solid $light-gray1;
   }
 }
 
@@ -1803,7 +1806,7 @@ ul.clear-list:first-child {
   padding: 5px 10px;
   font-size: 11px;
   border-radius: 2px;
-  border: 1px solid #e7eaec;
+  border: 1px solid $light-gray1;
   margin-bottom: 5px;
   a {
     color: inherit;
@@ -1821,20 +1824,20 @@ ul.clear-list:first-child {
 }
 
 .mail-box {
-  background-color: #fff;
-  border: 1px solid #e7eaec;
+  background-color: $white;
+  border: 1px solid $light-gray1;
   border-top: 0;
   padding: 0;
   margin-bottom: 20px;
 }
 
 .mail-body, .mail-text {
-  border-top: 1px solid #e7eaec;
+  border-top: 1px solid $light-gray1;
 }
 
 .mail-box-header {
-  background-color: #fff;
-  border: 1px solid #e7eaec;
+  background-color: $white;
+  border: 1px solid $light-gray1;
   border-bottom: 0;
   padding: 30px 20px 20px;
   h2 {
@@ -1900,12 +1903,12 @@ ul.clear-list:first-child {
 }
 
 .vote-item {
-  border-top: 1px solid #e7eaec;
+  border-top: 1px solid $light-gray1;
 }
 
 .social-feed-box {
-  border: 1px solid #e7eaec;
-  background: #fff;
+  border: 1px solid $light-gray1;
+  background: $white;
   margin-bottom: 15px;
 }
 
@@ -1914,7 +1917,7 @@ ul.clear-list:first-child {
   border-bottom: none;
   &:last-child {
     margin-bottom: 0;
-    border-bottom: 1px solid #e7eaec;
+    border-bottom: 1px solid $light-gray1;
   }
   p {
     font-size: 13px;
@@ -1951,9 +1954,9 @@ ul.clear-list:first-child {
 
 .vote-item {
   padding: 20px 25px;
-  background: #fff;
+  background: $white;
   &:last-child {
-    border-bottom: 1px solid #e7eaec;
+    border-bottom: 1px solid $light-gray1;
   }
   &:hover {
     background: #fbfbfb;
@@ -2012,7 +2015,7 @@ body {
   &.landing-page {
     color: #676a6c;
     font-family: 'Open Sans', helvetica, arial, sans-serif;
-    background-color: #fff;
+    background-color: $white;
   }
 }
 
@@ -2402,15 +2405,15 @@ body {
   }
   .navbar-default {
     &.navbar-scroll {
-      background-color: #fff;
-      border-color: #fff;
+      background-color: $white;
+      border-color: $white;
       padding: 15px 0;
     }
     background-color: transparent;
     border-color: transparent;
     transition: all .3s ease-in-out 0s;
     .nav li a {
-      color: #fff;
+      color: $white;
       font-family: 'Open Sans', helvetica, arial, sans-serif;
       font-weight: 700;
       letter-spacing: 1px;
@@ -2426,11 +2429,11 @@ body {
     .navbar-nav > {
       .active > a {
         background: 0 0;
-        color: #fff;
+        color: $white;
         border-top: 6px solid $link-color;
         &:hover {
           background: 0 0;
-          color: #fff;
+          color: $white;
           border-top: 6px solid $link-color;
         }
       }
@@ -2442,7 +2445,7 @@ body {
       }
       .active > a:focus {
         background: 0 0;
-        color: #fff;
+        color: $white;
       }
     }
     &.navbar-scroll .navbar-nav > .active > a:focus {
@@ -2452,9 +2455,9 @@ body {
     .navbar-brand {
       &:focus, &:hover {
         background: $link-color;
-        color: #fff;
+        color: $white;
       }
-      color: #fff;
+      color: $white;
       height: auto;
       display: block;
       font-size: 14px;
@@ -2474,7 +2477,7 @@ body {
   .navbar-wrapper .navbar.navbar-scroll {
     padding-top: 0;
     padding-bottom: 0;
-    border-bottom: 1px solid #e7eaec;
+    border-bottom: 1px solid $light-gray1;
     border-radius: 0;
   }
   .nav > li {
@@ -2492,7 +2495,7 @@ body {
   .navbar-fixed-top {
     border: none !important;
     &.navbar-scroll {
-      border-bottom: 1px solid #e7eaec !important;
+      border-bottom: 1px solid $light-gray1 !important;
     }
   }
   .navbar.navbar-scroll .navbar-brand {
@@ -2589,7 +2592,7 @@ body {
     }
   }
   .caption-link {
-    color: #fff;
+    color: $white;
     margin-left: 10px;
     text-transform: capitalize;
     font-weight: 400;
@@ -2617,7 +2620,7 @@ body {
   .navy-section {
     margin-top: 60px;
     background: $link-color;
-    color: #fff;
+    color: $white;
     padding: 20px 0;
   }
   .gray-section {
@@ -2632,7 +2635,7 @@ body {
   }
   .social-icon a {
     background: $link-color;
-    color: #fff;
+    color: $white;
     padding: 4px 8px;
     height: 28px;
     width: 28px;
@@ -2679,16 +2682,16 @@ body {
     }
   }
   .btn-info.btn-outline:hover, .btn-primary.btn-outline:hover, .btn-success.btn-outline:hover, .btn-warning.btn-outline:hover {
-    color: #fff;
+    color: $white;
   }
   .btn-primary {
     background-color: $link-color;
     border-color: $link-color;
-    color: #FFF;
+    color: $white;
     &.active, &:active, &:focus, &:hover {
       background-color: $link-color;
       border-color: $link-color;
-      color: #FFF;
+      color: $white;
     }
     padding: 10px 20px;
     &.active, &:active {
@@ -2754,8 +2757,8 @@ body {
       margin-top: 6px;
     }
     .navbar-default {
-      background-color: #fff;
-      border-color: #fff;
+      background-color: $white;
+      border-color: $white;
       padding: 15px 0;
       .navbar-nav > .active > a:focus {
         background: 0 0;
@@ -2771,7 +2774,7 @@ body {
     .navbar-wrapper .navbar {
       padding-top: 0;
       padding-bottom: 5px;
-      border-bottom: 1px solid #e7eaec;
+      border-bottom: 1px solid $light-gray1;
       border-radius: 0;
     }
     .nav > li > a {
@@ -2804,7 +2807,7 @@ body {
       display: block;
       float: none;
       .navbar-toggle {
-        background-color: #fff;
+        background-color: $white;
         padding: 9px 10px;
         border: none;
       }
