--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -20,27 +20,27 @@
         <!-- avatar -->
         <div class="col-xs-4">
             <div class="team-member wow zoomIn">
-                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="160" width="160" class="img-fluid rounded-circle" alt="">
+                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="160" width="160" class="img-responsive img-circle" alt="">
                 <h4><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h4>
                 <ul class="list-inline social-icon">
                     {% if site.author.github_username %}
-                    <li class="list-inline-item"><a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fab fa-github"></i></a></li>
                     {% endif %}
                     {% if site.author.linkedin_id %}
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/{{ site.author.linkedin_id }}" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/{{ site.author.linkedin_id }}" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
                     {% endif %}
                     {% if site.author.facebook_username %}
-                    <li class="list-inline-item"><a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank"><i class="fab fa-facebook-f"></i></a></li>
                     {% endif %}
                     {% if site.author.twitter_username %}
-                    <li class="list-inline-item"><a href="https://twitter.com/{{ site.author.twitter_username }}" target="blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://twitter.com/{{ site.author.twitter_username }}" target="blank"><i class="fab fa-twitter"></i></a></li>
                     {% endif %}
                     {% if site.author.email %}
-                    <li class="list-inline-item"><a href="mailto:{{ site.author.email }}"><i class="far fa-envelope"></i></a></li>
+                    <li><a href="mailto:{{ site.author.email }}"><i class="far fa-envelope"></i></a></li>
                     {% endif %}
-                    <li class="list-inline-item"><a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fas fa-rss"></i></a></li>
+                    <li><a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fas fa-rss"></i></a></li>
                     {% if site.author.cv %}
-                    <li class="list-inline-item"><a href="{{ site.author.cv }}" target="blank"><i class="fas fa-file-pdf"></i></a></li>
+                    <li><a href="{{ site.author.cv }}" target="blank"><i class="fas fa-file-pdf"></i></a></li>
                     {% endif %}
                 </ul>
             </div>
