--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -21,9 +21,9 @@
             <h4><span class="navy">{{ link.last_name }}</span> {{ link.first_name }}</h4>
             <p>{{ link.desc }}</p>
             <ul class="list-inline social-icon">
-                <li class="list-inline-item"><a href="{{ link.website }}" target="blank"><i class="fas fa-link"></i></a>
+                <li><a href="{{ link.website }}" target="blank"><i class="fas fa-link"></i></a>
                 </li>
-                <li class="list-inline-item"><a href="mailto:{{ link.email }}"><i class="far fa-envelope"></i></a>
+                <li><a href="mailto:{{ link.email }}"><i class="far fa-envelope"></i></a>
                 </li>
             </ul>
         </div>
