--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,13 +10,6 @@ $gray: #676a6c;
 $white: #fff;
 //$link-color: #6d1f1a;
 
-.btn-xs {
-  padding: .25rem .4rem;
-  font-size: .875rem;
-  line-height: .5;
-  border-radius: .2rem;
-}
-
 .landing-page .carousel-caption {
   h1, p {
     text-transform: uppercase;
@@ -185,6 +178,7 @@ h3, h4, h5 {
 }
 
 .navbar-fixed-top {
+  transition-duration: .4s;
   border-bottom: 1px solid $light-gray1 !important;
   z-index: 2030;
   background: $light-gray2;
@@ -261,7 +255,7 @@ body.canvas-menu .nav-header {
   }
 }
 
-.btn-secondary {
+.btn-default {
   &.active, &:active {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) inset;
   }
@@ -515,7 +509,7 @@ button.dim {
   }
 }
 
-.btn-secondary {
+.btn-default {
   color: inherit;
   background: $white;
   border: 1px solid $light-gray1;
@@ -533,7 +527,7 @@ button.dim {
   }
 }
 
-.btn-secondary {
+.btn-default {
   &.active {
     color: inherit;
     border: 1px solid #d2d2d2;
@@ -670,7 +664,6 @@ button.dim {
   }
 }
 
-// Bootstrap 4: Replaced .has-error, .has-warning, and .has-success classes with HTML5 form validation via CSS’s :invalid and :valid pseudo-classes.
 .has-error .form-control:focus, .has-success .form-control:focus, .has-warning .form-control:focus, .navbar-collapse, .navbar-form {
   box-shadow: none;
 }
@@ -681,7 +674,7 @@ button.dim {
   }
 }
 
-.card {
+.panel {
   box-shadow: none;
 }
 
@@ -722,7 +715,7 @@ button {
       box-shadow: inset 0 0 0 #16987e, 0 2px 0 0 #16987e, 0 5px 3px #999;
     }
   }
-  &.btn-secondary.dim {
+  &.btn-default.dim {
     box-shadow: inset 0 0 0 #b3b3b3, 0 5px 0 0 #b3b3b3, 0 10px 5px #999;
     &:active {
       box-shadow: inset 0 0 0 #b3b3b3, 0 2px 0 0 #b3b3b3, 0 5px 3px #999;
@@ -818,7 +811,7 @@ button.dim:active:before {
   min-height: 200px;
 }
 
-.rounded-circle {
+.img-circle {
   border-radius: 50%;
 }
 
@@ -893,21 +886,19 @@ button.dim:active:before {
   border-color: $warning-color;
 }
 
-// Bootstrap 4: Replaced .has-error, .has-warning, and .has-success classes with HTML5 form validation via CSS’s :invalid and :valid pseudo-classes.
 .has-error .form-control {
   border-color: #ed5565;
 }
 
-.has-success .col-form-label {
+.has-success .control-label {
   color: $link-color;
 }
 
-.has-warning .col-form-label {
+.has-warning .control-label {
   color: $warning-color;
 }
 
-// Bootstrap 4: Replaced .has-error, .has-warning, and .has-success classes with HTML5 form validation via CSS’s :invalid and :valid pseudo-classes.
-.has-error .col-form-label {
+.has-error .control-label {
   color: #ed5565;
 }
 
@@ -1312,7 +1303,7 @@ a {
   font-size: 12px;
 }
 
-.card.blank-card {
+.panel.blank-panel {
   background: 0 0;
   margin: 0;
 }
@@ -1453,6 +1444,26 @@ code {
 .navy-bg {
   background-color: $link-color;
   color: $white;
+}
+
+.panel-primary {
+  border-color: $link-color;
+}
+
+.panel-success {
+  border-color: $success-color;
+}
+
+.panel-info {
+  border-color: #23c6c8;
+}
+
+.panel-warning {
+  border-color: $warning-color;
+}
+
+.panel-title {
+  font-size: inherit;
 }
 
 .text-navy {
@@ -2512,11 +2523,11 @@ body {
   .carousel-caption {
     z-index: 10;
   }
-  .carousel .carousel-item {
+  .carousel .item {
     height: 78px;
     background-color: #777;
   }
-  .carousel-inner > .carousel-item > img {
+  .carousel-inner > .item > img {
     position: absolute;
     top: 0;
     left: 0;
@@ -2525,18 +2536,20 @@ body {
   }
   .carousel-fade {
     .carousel-inner {
-      .carousel-item {
+      .item {
         opacity: 0;
+        -webkit-transition-property: opacity;
+        transition-property: opacity;
       }
       .active {
         opacity: 1;
-        &.carousel-item-left, &.carousel-item-right {
+        &.left, &.right {
           left: 0;
           opacity: 0;
           z-index: 1;
         }
       }
-      .carousel-item-next.carousel-item-left, .carousel-item-prev.carousel-item-right {
+      .next.left, .prev.right {
         opacity: 1;
       }
     }
@@ -2545,7 +2558,7 @@ body {
     }
   }
   .carousel-control {
-    &.carousel-item-left, &.carousel-item-right {
+    &.left, &.right {
       background: 0 0;
     }
     width: 6%;
