--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1995,7 +1995,7 @@ ul.clear-list:first-child {
 .vote-info {
   color: #b4b6b8;
   font-size: 12px;
-  span {
+  a {
     color: #b4b6b8;
     font-size: 12px;
     margin-right: 10px;
