--- a/_sass/_open_sans.scss
+++ b/_sass/_open_sans.scss
@@ -2,6 +2,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: auto;
   src: local("Open Sans Light"), local("OpenSans-Light"), url(/static/assets/fonts/opensans/DXI1ORHCpsQm3Vp6mXoaTQ7aC6SjiAOpAWOKfJDfVRY.woff2) format("woff2");
   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
@@ -11,6 +12,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: auto;
   src: local("Open Sans Light"), local("OpenSans-Light"), url(/static/assets/fonts/opensans/DXI1ORHCpsQm3Vp6mXoaTRdwxCXfZpKo5kWAx_74bHs.woff2) format("woff2");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
@@ -20,6 +22,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: auto;
   src: local("Open Sans Light"), local("OpenSans-Light"), url(/static/assets/fonts/opensans/DXI1ORHCpsQm3Vp6mXoaTZ6vnaPZw6nYDxM4SVEMFKg.woff2) format("woff2");
   unicode-range: U+1F00-1FFF;
 }
@@ -29,6 +32,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: auto;
   src: local("Open Sans Light"), local("OpenSans-Light"), url(/static/assets/fonts/opensans/DXI1ORHCpsQm3Vp6mXoaTfy1_HTwRwgtl1cPga3Fy3Y.woff2) format("woff2");
   unicode-range: U+0370-03FF;
 }
@@ -38,6 +42,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: auto;
   src: local("Open Sans Light"), local("OpenSans-Light"), url(/static/assets/fonts/opensans/DXI1ORHCpsQm3Vp6mXoaTfgrLsWo7Jk1KvZser0olKY.woff2) format("woff2");
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
@@ -47,6 +52,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: auto;
   src: local("Open Sans Light"), local("OpenSans-Light"), url(/static/assets/fonts/opensans/DXI1ORHCpsQm3Vp6mXoaTYjoYw3YTyktCCer_ilOlhE.woff2) format("woff2");
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
@@ -56,6 +62,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: auto;
   src: local("Open Sans Light"), local("OpenSans-Light"), url(/static/assets/fonts/opensans/DXI1ORHCpsQm3Vp6mXoaTRampu5_7CjHW5spxoeN3Vs.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
@@ -65,6 +72,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: local("Open Sans"), local("OpenSans"), url(/static/assets/fonts/opensans/K88pR3goAWT7BTt32Z01m4X0hVgzZQUfRDuZrPvH3D8.woff2) format("woff2");
   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
@@ -74,6 +82,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: local("Open Sans"), local("OpenSans"), url(/static/assets/fonts/opensans/RjgO7rYTmqiVp7vzi-Q5UYX0hVgzZQUfRDuZrPvH3D8.woff2) format("woff2");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
@@ -83,6 +92,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: local("Open Sans"), local("OpenSans"), url(/static/assets/fonts/opensans/LWCjsQkB6EMdfHrEVqA1KYX0hVgzZQUfRDuZrPvH3D8.woff2) format("woff2");
   unicode-range: U+1F00-1FFF;
 }
@@ -92,6 +102,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: local("Open Sans"), local("OpenSans"), url(/static/assets/fonts/opensans/xozscpT2726on7jbcb_pAoX0hVgzZQUfRDuZrPvH3D8.woff2) format("woff2");
   unicode-range: U+0370-03FF;
 }
@@ -101,6 +112,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: local("Open Sans"), local("OpenSans"), url(/static/assets/fonts/opensans/59ZRklaO5bWGqF5A9baEEYX0hVgzZQUfRDuZrPvH3D8.woff2) format("woff2");
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
@@ -110,6 +122,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: local("Open Sans"), local("OpenSans"), url(/static/assets/fonts/opensans/u-WUoqrET9fUeobQW7jkRYX0hVgzZQUfRDuZrPvH3D8.woff2) format("woff2");
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
@@ -119,6 +132,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: local("Open Sans"), local("OpenSans"), url(/static/assets/fonts/opensans/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
@@ -128,6 +142,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: auto;
   src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/static/assets/fonts/opensans/MTP_ySUJH_bn48VBG8sNSg7aC6SjiAOpAWOKfJDfVRY.woff2) format("woff2");
   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
@@ -137,6 +152,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: auto;
   src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/static/assets/fonts/opensans/MTP_ySUJH_bn48VBG8sNShdwxCXfZpKo5kWAx_74bHs.woff2) format("woff2");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
@@ -146,6 +162,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: auto;
   src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/static/assets/fonts/opensans/MTP_ySUJH_bn48VBG8sNSp6vnaPZw6nYDxM4SVEMFKg.woff2) format("woff2");
   unicode-range: U+1F00-1FFF;
 }
@@ -155,6 +172,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: auto;
   src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/static/assets/fonts/opensans/MTP_ySUJH_bn48VBG8sNSvy1_HTwRwgtl1cPga3Fy3Y.woff2) format("woff2");
   unicode-range: U+0370-03FF;
 }
@@ -164,6 +182,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: auto;
   src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/static/assets/fonts/opensans/MTP_ySUJH_bn48VBG8sNSvgrLsWo7Jk1KvZser0olKY.woff2) format("woff2");
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
@@ -173,6 +192,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: auto;
   src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/static/assets/fonts/opensans/MTP_ySUJH_bn48VBG8sNSojoYw3YTyktCCer_ilOlhE.woff2) format("woff2");
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
@@ -182,6 +202,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: auto;
   src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/static/assets/fonts/opensans/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
@@ -191,6 +212,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: auto;
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/static/assets/fonts/opensans/k3k702ZOKiLJc3WVjuplzA7aC6SjiAOpAWOKfJDfVRY.woff2) format("woff2");
   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
@@ -200,6 +222,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: auto;
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/static/assets/fonts/opensans/k3k702ZOKiLJc3WVjuplzBdwxCXfZpKo5kWAx_74bHs.woff2) format("woff2");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
@@ -209,6 +232,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: auto;
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/static/assets/fonts/opensans/k3k702ZOKiLJc3WVjuplzJ6vnaPZw6nYDxM4SVEMFKg.woff2) format("woff2");
   unicode-range: U+1F00-1FFF;
 }
@@ -218,6 +242,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: auto;
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/static/assets/fonts/opensans/k3k702ZOKiLJc3WVjuplzPy1_HTwRwgtl1cPga3Fy3Y.woff2) format("woff2");
   unicode-range: U+0370-03FF;
 }
@@ -227,6 +252,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: auto;
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/static/assets/fonts/opensans/k3k702ZOKiLJc3WVjuplzPgrLsWo7Jk1KvZser0olKY.woff2) format("woff2");
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
@@ -236,6 +262,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: auto;
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/static/assets/fonts/opensans/k3k702ZOKiLJc3WVjuplzIjoYw3YTyktCCer_ilOlhE.woff2) format("woff2");
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
@@ -245,6 +272,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: auto;
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/static/assets/fonts/opensans/k3k702ZOKiLJc3WVjuplzBampu5_7CjHW5spxoeN3Vs.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
