--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -21,9 +21,9 @@
                   <img src="{{ project.img | prepend: site.baseurl }}" class="img-responsive img-circle img-small" alt="">
                   <h4>
                   {% if project.url %}
-                  <a href="{{ project.url }}" target="_blank"><span class="navy">{{ project.name }}</span></a>
+                  <a href="{{ project.url }}" target="_blank" rel="noopener"><span class="navy">{{ project.name }}</span></a>
                   {% elsif project.repo %}
-                  <a href="https://github.com/{{ project.gh_user }}/{{ project.repo }}" target="_blank"><span class="navy">{{ project.name }}</span></a>
+                  <a href="https://github.com/{{ project.gh_user }}/{{ project.repo }}" target="_blank" rel="noopener"><span class="navy">{{ project.name }}</span></a>
                   {% else %}
                   <span class="navy">{{ project.name }}</span>
                   {% endif %}
@@ -31,8 +31,8 @@
                   <p><span data-i18n="projects.{{ project.i18n }}">{{ project.desc }}</span></p>
                   {% if project.repo %}
                   <div user="{{ project.gh_user }}" repo="{{ project.repo }}" class="ghbtn">
-                      <a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/stargazers" class="btn btn-white btn-xs star"><i class="far fa-star"></i> ...</a>&emsp;&emsp;
-                      <a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/network" class="btn btn-white btn-xs fork"><i class="fas fa-code-branch"></i> ...</a>
+                      <a target="_blank" rel="noopener" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/stargazers" class="btn btn-white btn-xs star"><i class="far fa-star"></i> ...</a>&emsp;&emsp;
+                      <a target="_blank" rel="noopener" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/network" class="btn btn-white btn-xs fork"><i class="fas fa-code-branch"></i> ...</a>
                       <div style="height: 10px;"></div>
                   </div>
                   {% endif %}
