--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0 />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0" />
   {% if page.desc %}
     <meta content="{{ page.desc }}" name="description">
   {% endif %}
@@ -10,7 +10,6 @@
   {% endif %}
   <meta name="author" content="{{ site.author.name }}">
   <meta name="baseurl" content="{{ site.baseurl }}">
-  <meta name="Description" content="{{ site.author.name }}'s personal website. Enjoy!">
 
   <title>
     {% if page.title != "index" %}
