--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <!-- Set background for slide in css -->
-            <div class="header-back" style="background-image: url({{ "/static/assets/img/"  | prepend: site.baseurl }}{{ banner.src }});" title="{{ banner.title }}"></div>
+            <div class="lozad header-back" data-background-image="{{ "/static/assets/img/"  | prepend: site.baseurl }}{{ banner.src }}" title="{{ banner.title }}"></div>
         </div>
         {% endfor %}
 
