--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -16,8 +16,8 @@
             </div>
             <!-- Set background for slide in css -->
             <div
-            class="header-back"
-            style="background-image: url({{ '/static/assets/img/' | prepend: site.baseurl }}{{ site.data.index.banners[0].src }});"
+            class="lozad header-back"
+            data-background-image="{{ '/static/assets/img/' | prepend: site.baseurl }}{{ site.data.index.banners[0].src }}"
             title="{{ site.data.index.banners[0].title }}">
             </div>
         </div>
